<resources>
    <string name="app_name">My To Do</string>


    <string name="splash_welcome">WELCOME \nTO THE \nTODO TASKS \nAPP</string>

    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_required">Username Required!</string>
    <string name="login_password_required">Password Required!</string>
    <string name="login_invalid_details">Invalid Username or Password</string>
    <string name="login_signin">Sign In</string>
    <string name="login_cancel">Cancel</string>

    <string name="quit_app">Do you want to quit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="crud_save">Todo Activity Saved!</string>
    <string name="crud_deleteById">Swapped Item Deleted!</string>
    <string name="crud_deleteAll">All Items Deleted!</string>
    <string name="crud_update">Updated!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Set Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_isComplete">isComplete</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel_prompt">Do you desire to go back to home screen?</string>
    <string name="edit_update">Update</string>

</resources>